Desactivé grid para la estructura del sitio

--- a/scss/origen.scss
+++ b/scss/origen.scss
@@ -1,6 +1,6 @@
 @import "globales";
 @import "fondos";
-@import "grid";
+//@import "grid";
 @import "variables";
 @import "barraNav";
 @import "footer";
