--- a/scss/origen.scss
+++ b/scss/origen.scss
@@ -5,6 +5,12 @@
 @import "barraNav";
 @import "footer";
 
+//Prueba footer
+
+.fondo{
+    display: flex;
+    flex-direction: column;
+}
 
 /* Index MBF */
 
