--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,10 @@ li .enlace--menu {
   font-size: 1.5rem;
   margin: 0; }
 
+.fondo {
+  display: flex;
+  flex-direction: column; }
+
 /* Index MBF */
 .titulo {
   font-family: "PT Sans", sans-serif;
