--- a/css/styles.css
+++ b/css/styles.css
@@ -37,12 +37,13 @@ h6 {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  min-height: 100vh; }
+  display: flex;
+  flex-direction: column; }
 
 /* Imagenes fondo */
 .fondo--inicio {
   background-image: url(../img/fondos/portadamobile.webp); }
-  @media (min-width: 480px) {
+  @media (min-width: 768px) {
     .fondo--inicio {
       background-image: url(../img/fondos/portada.webp); } }
 
@@ -67,13 +68,12 @@ h6 {
 /* Barra de navegacion */
 .navbar {
   background: linear-gradient(90deg, rgba(196, 53, 126, 0.5) 0%, rgba(238, 145, 188, 0.5) 100%); }
-
-.navbar__logo {
-  font-size: 1.8rem;
-  margin-left: 1rem;
-  color: #F8CF57 !important; }
-  .navbar__logo img {
-    margin-right: 2rem; }
+  .navbar__logo {
+    font-size: 1.8rem;
+    margin-left: 1rem;
+    color: #F8CF57 !important; }
+    .navbar__logo img {
+      margin-right: 2rem; }
 
 .enlace, li .enlace--menu {
   font-family: "PT Sans", sans-serif;
@@ -97,7 +97,8 @@ li .enlace--menu {
 /* Footer */
 .footer {
   background: #c4357e;
-  background: linear-gradient(90deg, rgba(196, 53, 126, 0.5) 0%, rgba(238, 145, 188, 0.5) 100%); }
+  background: linear-gradient(90deg, rgba(196, 53, 126, 0.5) 0%, rgba(238, 145, 188, 0.5) 100%);
+  min-width: 100vw; }
   .footer__redes {
     width: 95%;
     height: 100%;
@@ -110,6 +111,13 @@ li .enlace--menu {
         align-items: center;
         gap: 2rem; } }
 
+.footer__redes--hover {
+  transition: background-color border-radius .5s ease; }
+
+.footer__redes--hover:hover {
+  background-color: rgba(238, 145, 188, 0.5);
+  border-radius: 10px; }
+
 .footer__nombre {
   display: inline;
   font-family: "PT Sans", sans-serif;
@@ -117,11 +125,7 @@ li .enlace--menu {
   font-size: 1.5rem;
   margin: 0; }
 
-.fondo {
-  display: flex;
-  flex-direction: column; }
-
-/* Index MBF */
+/* Se reutiliza */
 .titulo {
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
@@ -131,6 +135,11 @@ li .enlace--menu {
   background-color: rgba(248, 207, 87, 0.8);
   padding: 1rem; }
 
+.titulo--h3 {
+  font-family: "PT Sans", sans-serif;
+  font-weight: bold; }
+
+/* Index MBF */
 .main--tarjetas {
   display: flex;
   flex-direction: column; }
@@ -158,6 +167,18 @@ li .enlace--menu {
     @media (min-width: 768px) {
       .tarjetas p {
         font-size: 2rem; } }
+
+.main--funciones {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(238, 145, 188, 0.5);
+  padding: 1rem;
+  border: 2px solid #F8CF57;
+  border-radius: 10px; }
+
+.ubicacion {
+  min-width: 95%; }
 
 /* Bio MBF */
 @media (min-width: 480px) {
