--- a/scss/origen.scss
+++ b/scss/origen.scss
@@ -5,15 +5,7 @@
 @import "barraNav";
 @import "footer";
 
-//Prueba footer
-
-.fondo{
-    display: flex;
-    flex-direction: column;
-}
-
-/* Index MBF */
-
+/* Se reutiliza */
 .titulo{
     font-family: $fuenteHead;
     font-weight: bold;
@@ -23,6 +15,13 @@
     background-color: $amarillotransp;
     padding: 1rem;
 }
+
+.titulo--h3{
+    font-family: $fuenteHead;
+    font-weight: bold;
+}
+
+/* Index MBF */
 
 .main--tarjetas{
     display: flex;
@@ -57,6 +56,20 @@
             font-size: 2rem;
         }
     }
+}
+
+.main--funciones{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   background-color: $rosatransp;
+   padding: 1rem;
+   border: 2px solid #F8CF57;
+    border-radius: 10px;
+}
+
+.ubicacion{
+    min-width: 95%;
 }
 
 /* Bio MBF */
