--- a/scss/_barraNav.scss
+++ b/scss/_barraNav.scss
@@ -1,7 +1,11 @@
 /* Barra de navegacion */
 
-.navbar{
+header{
     background: linear-gradient(90deg, rgba(196,53,126,0.5) 0%, rgba(238,145,188,0.5) 100%);
+}
+
+.navbar{
+    background: linear-gradient(90deg, rgba(196,53,126,0.5) 0%, rgba(238,145,188,0.5) 100%) !important;
 
 &__logo{
     font-size: 1.8rem;
