--- a/scss/origen.scss
+++ b/scss/origen.scss
@@ -80,6 +80,42 @@
     }
 }
 
+.habilidades__contenedor{
+    border: 2px solid #F8CF57;
+    border-radius: 10px;
+    background-color: $rosatransp;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    transition: background-color .3s ease;
+}
+
+.habilidades__contenedor:hover{
+    background-color: $rosaosc;
+}
+
+.habilidades__contenedor--secundario{
+    @include media (lg){
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.habilidades__img{
+    max-width: 10rem;
+    @include media (sm){
+        margin-right: 2rem;
+    }
+}
+
+.habilidades__texto{
+    font-family: $fuenteHead;
+    font-weight: bold;
+    font-size: 3rem;
+    color: $amarillo;
+}
+
 /* Media MBF */
 
 .carousel{
