--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,12 @@ li .enlace--menu {
   margin: 0; }
 
 /* Se reutiliza */
+.negrita {
+  font-family: "PT Sans", sans-serif;
+  font-weight: bold;
+  font-size: 2.5rem; }
+
+/* Index MBF */
 .titulo {
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
@@ -135,11 +141,6 @@ li .enlace--menu {
   background-color: rgba(248, 207, 87, 0.8);
   padding: 1rem; }
 
-.titulo--h3 {
-  font-family: "PT Sans", sans-serif;
-  font-weight: bold; }
-
-/* Index MBF */
 .main--tarjetas {
   display: flex;
   flex-direction: column; }
@@ -216,13 +217,19 @@ li .enlace--menu {
   color: #F8CF57; }
 
 /* Media MBF */
-@media (min-width: 768px) {
-  .carousel {
-    width: 70% !important; } }
+.media {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem; }
 
-@media (min-width: 1024px) {
-  .carousel {
-    width: 50% !important; } }
+.carousel-caption h5 {
+  font-family: "Antic Slab", serif;
+  font-size: 2rem;
+  color: black;
+  background-color: rgba(248, 207, 87, 0.8);
+  border-radius: 10px; }
 
 /* Técnica MBF */
 .tecnica {
