--- a/scss/origen.scss
+++ b/scss/origen.scss
@@ -6,6 +6,15 @@
 @import "footer";
 
 /* Se reutiliza */
+
+.negrita{
+    font-family: $fuenteHead;
+    font-weight: bold;
+    font-size: 2.5rem;
+}
+
+/* Index MBF */
+
 .titulo{
     font-family: $fuenteHead;
     font-weight: bold;
@@ -15,13 +24,6 @@
     background-color: $amarillotransp;
     padding: 1rem;
 }
-
-.titulo--h3{
-    font-family: $fuenteHead;
-    font-weight: bold;
-}
-
-/* Index MBF */
 
 .main--tarjetas{
     display: flex;
@@ -118,15 +120,24 @@
 
 /* Media MBF */
 
-.carousel{
-    @include media (md){
-        width: 70% !important;
-    }
+.media{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+}
 
-    @include media (lg){
-        width: 50% !important;
+.carousel-caption{
+    h5{
+        font-family: $fuenteHead2;
+        font-size: 2rem;
+        color: black;
+        background-color: $amarillotransp;
+        border-radius: 10px;
     }
 }
+
 
 /* Técnica MBF */
 
