--- a/scss/_globales.scss
+++ b/scss/_globales.scss
@@ -1,11 +1,11 @@
 /* Global */
 
-html {
+* {
     font-size: 62.5%; /*  Para usar REMs / 1rem = 10px */ 
 }
 
 p{
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     line-height: 1.1;
 }
 
