--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 /* Global */
-html {
+* {
   font-size: 62.5%;
   /*  Para usar REMs / 1rem = 10px */ }
 
 p {
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   line-height: 1.1; }
 
 img {
@@ -64,29 +64,29 @@ h6 {
       background-image: url(../img/fondos/contacto.webp); } }
 
 /* Barra de navegacion */
-header {
+.header {
   background: linear-gradient(90deg, rgba(196, 53, 126, 0.5) 0%, rgba(238, 145, 188, 0.5) 100%); }
 
 .navbar {
   background: linear-gradient(90deg, rgba(196, 53, 126, 0.5) 0%, rgba(238, 145, 188, 0.5) 100%) !important; }
-  .navbar__logo {
-    font-size: 1.8rem;
-    margin-left: 1rem;
-    color: #F8CF57 !important; }
-    .navbar__logo img {
-      margin-right: 2rem; }
 
-.enlace, li .enlace--menu {
+.navbar__logo {
+  margin: 0 1rem 0 1rem; }
+
+.enlace {
   font-family: "PT Sans", sans-serif;
-  font-weight: bold; }
+  font-weight: bold;
+  font-size: 1.5rem;
+  color: #F8CF57;
+  transition: color .3s ease !important;
+  text-decoration: none; }
 
-.enlace--transicion {
-  transition: color .3s ease !important; }
-
-.enlace--transicion:hover {
+.enlace:hover {
   color: #dddddd !important; }
 
 li .enlace--menu {
+  font-family: "PT Sans", sans-serif;
+  font-weight: bold;
   font-size: 2rem;
   margin-right: 2rem;
   transition: color .3s;
@@ -97,8 +97,7 @@ li .enlace--menu {
 
 /* Footer */
 .footer {
-  background: linear-gradient(90deg, rgba(196, 53, 126, 0.5) 0%, rgba(238, 145, 188, 0.5) 100%);
-  min-width: 100vw; }
+  background: linear-gradient(90deg, rgba(196, 53, 126, 0.5) 0%, rgba(238, 145, 188, 0.5) 100%); }
   .footer__redes {
     width: 95%;
     height: 100%;
@@ -222,6 +221,9 @@ li .enlace--menu {
   color: black;
   background-color: rgba(248, 207, 87, 0.8);
   border-radius: 10px; }
+  @media (min-width: 480px) {
+    .carousel-caption h5 {
+      font-size: 2.5rem; } }
 
 /* Técnica MBF */
 .tecnica {
