--- a/scss/origen.scss
+++ b/scss/origen.scss
@@ -96,13 +96,6 @@
     background-color: $rosaosc;
 }
 
-// .habilidades__contenedor--secundario{
-//     @include media (lg){
-//         display: flex;
-//         justify-content: space-between;
-//     }
-// }
-
 .habilidades__img{
     max-width: 10rem;
 }
@@ -131,6 +124,10 @@
         color: black;
         background-color: $amarillotransp;
         border-radius: 10px;
+
+        @include media (sm){
+            font-size: 2.5rem;
+        }
     }
 }
 
