--- a/css/styles.css
+++ b/css/styles.css
@@ -52,10 +52,7 @@ h6 {
       background-image: url(../img/fondos/bio.webp); } }
 
 .fondo--tecnica {
-  background-image: url(../img/fondos/tecnicamobile.webp); }
-  @media (min-width: 480px) {
-    .fondo--tecnica {
-      background-image: url(../img/fondos/tecnica.webp); } }
+  background-image: url(../img/fondos/tecnica.jpg); }
 
 .fondo--contacto {
   background-image: url(../img/fondos/contactomobile.webp); }
@@ -97,13 +94,15 @@ li .enlace--menu {
 
 /* Footer */
 .footer {
-  background: linear-gradient(90deg, rgba(196, 53, 126, 0.5) 0%, rgba(238, 145, 188, 0.5) 100%); }
+  background: linear-gradient(90deg, rgba(196, 53, 126, 0.5) 0%, rgba(238, 145, 188, 0.5) 100%);
+  margin-top: 1.5rem; }
   .footer__redes {
     width: 95%;
     height: 100%;
     display: flex;
     justify-content: space-around;
-    align-items: center; }
+    align-items: center;
+    padding: 1rem 0 1rem 0; }
     @media (min-width: 768px) {
       .footer__redes {
         justify-content: flex-end;
@@ -215,6 +214,15 @@ li .enlace--menu {
   justify-content: center;
   padding: 1rem; }
 
+.carousel {
+  border: 2px solid #F8CF57;
+  border-radius: 10px;
+  background-color: rgba(238, 145, 188, 0.5);
+  padding: 2rem; }
+  @media (min-width: 768px) {
+    .carousel {
+      width: 60vw; } }
+
 .carousel-caption h5 {
   font-family: "Antic Slab", serif;
   font-size: 2rem;
@@ -261,7 +269,8 @@ li .enlace--menu {
 
 .alert {
   border-radius: 10px;
-  margin: 0 1rem 1rem 1rem; }
+  margin: 0 1rem 1rem 1rem;
+  border: 2px solid #C4357E; }
   .alert p {
     font-family: "Antic Slab", serif;
     font-weight: bold;
