--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,6 +2,7 @@
 
 .footer {
     background: linear-gradient(90deg, rgba(196,53,126,0.5) 0%, rgba(238,145,188,0.5) 100%);
+    margin-top: 1.5rem;
 
 &__redes{
 
@@ -10,6 +11,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 1rem 0 1rem 0;
     
 
     @include media(md){
