--- a/scss/origen.scss
+++ b/scss/origen.scss
@@ -94,6 +94,7 @@
 
 .habilidades__contenedor:hover{
     background-color: $rosaosc;
+
 }
 
 .habilidades__img{
@@ -115,6 +116,17 @@
     align-items: center;
     justify-content: center;
     padding: 1rem;
+}
+
+.carousel{
+    border: 2px solid #F8CF57;
+    border-radius: 10px;
+    background-color: $rosatransp;
+    padding: 2rem;
+
+    @include media (md){
+        width: 60vw;
+    }
 }
 
 .carousel-caption{
@@ -177,6 +189,7 @@
 .alert{
     border-radius: 10px;
     margin: 0 1rem 1rem 1rem;
+    border: 2px solid $rosaosc;
 
     p{
         font-family: $fuenteHead2;
