--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,5 @@
 //Colores
-$blanco: #dddddd;
+$blanco: #e7e7e7;
 $amarillo: #F8CF57;
 $amarillotransp: rgba(248,207,87,0.8);
 $rosatransp: rgba(238,145,188,0.5);
