--- a/css/styles.css
+++ b/css/styles.css
@@ -268,7 +268,8 @@ li .enlace--menu {
   margin: 3rem;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  justify-content: center; }
 
 .tecnica__tarjeta:last-of-type {
   align-self: flex-end;
@@ -278,6 +279,11 @@ li .enlace--menu {
   font-size: 4rem;
   color: #F8CF57;
   font-weight: bold; }
+
+.tecnica__tarjeta__contenedor {
+  display: flex;
+  flex-direction: column;
+  align-content: center; }
 
 .contenedorTecnica {
   text-align: center;
