--- a/scss/_globales.scss
+++ b/scss/_globales.scss
@@ -52,3 +52,9 @@ $breakpoints: (
         color: $amarillo !important;
         font-size: 1.3rem;
     }
+
+.negrita{
+    font-family: $fuenteHead;
+    font-weight: bold;
+    font-size: 2.5rem;
+}
