--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -11,3 +11,9 @@ $rosaclaro: #EE91BC;
 $fuenteHead: 'PT Sans', sans-serif;
 $fuenteP: 'Antic Slab', serif;
 $fuenteHead2: 'Antic Slab', serif;
+
+//Borde
+$bordeAmarillo: 2px solid #F8CF57;
+$bordeRosa: 2px solid #C4357E; 
+
+$radius: 10px;
