--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,33 @@ h5 {
 h6 {
   font-size: 1.16667rem; }
 
+.titulo {
+  font-family: "PT Sans", sans-serif;
+  font-weight: bold;
+  color: #C4357E;
+  border: 2px solid #C4357E;
+  border-radius: 10px;
+  background-color: rgba(248, 207, 87, 0.8);
+  padding: 1rem; }
+
+.negrita {
+  font-family: "PT Sans", sans-serif;
+  font-weight: bold;
+  font-size: 2.5rem; }
+
+.tarjetas {
+  background-color: rgba(238, 145, 188, 0.5);
+  border: 2px solid #F8CF57;
+  border-radius: 10px;
+  padding: 1rem; }
+
+.tarjetas--texto {
+  font-size: 1.5rem;
+  line-height: 1.2; }
+  @media (min-width: 768px) {
+    .tarjetas--texto {
+      font-size: 2rem; } }
+
 /* Estilos placeholder*/
 ::-webkit-input-placeholder {
   color: #F8CF57 !important;
@@ -43,18 +70,11 @@ h6 {
   color: #F8CF57 !important;
   font-size: 1.3rem; }
 
-.negrita {
-  font-family: "PT Sans", sans-serif;
-  font-weight: bold;
-  font-size: 2.5rem; }
-
 /* Fondo */
 .fondo {
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center;
-  display: flex;
-  flex-direction: column; }
+  background-position: center center; }
 
 /* Imagenes fondo */
 .fondo--inicio {
@@ -94,6 +114,9 @@ h6 {
 .navbar-nav li {
   display: flex;
   justify-content: center; }
+
+.navbar-toggler {
+  border: 0; }
 
 .navbar-toggler-icon {
   width: 2rem;
@@ -152,51 +175,23 @@ li .enlace--menu {
   font-size: 1.5rem;
   margin: 0; }
 
-/* Se reutiliza */
-.negrita {
-  font-family: "PT Sans", sans-serif;
-  font-weight: bold;
-  font-size: 2.5rem; }
-
 /* Index MBF */
-.titulo {
-  font-family: "PT Sans", sans-serif;
-  font-weight: bold;
-  color: #C4357E;
-  border: 2px solid #C4357E;
-  border-radius: 10px;
-  background-color: rgba(248, 207, 87, 0.8);
-  padding: 1rem; }
-
-.main--tarjetas {
+.inicio {
   display: flex;
   flex-direction: column; }
 
-.contenedor--tarjetas {
+.inicio__tarjetas {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   height: 60%;
   margin-top: 3rem; }
   @media (min-width: 768px) {
-    .contenedor--tarjetas {
+    .inicio__tarjetas {
       width: 60%;
       align-self: flex-end; } }
 
-.tarjetas {
-  background-color: rgba(238, 145, 188, 0.5);
-  border: 2px solid #F8CF57;
-  border-radius: 10px;
-  padding: 1rem; }
-
-.tarjetas--textindex {
-  font-size: 1.5rem;
-  line-height: 1.2; }
-  @media (min-width: 768px) {
-    .tarjetas--textindex {
-      font-size: 2rem; } }
-
-.main--funciones {
+.inicio__funciones {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -210,7 +205,7 @@ li .enlace--menu {
 
 /* Bio MBF */
 @media (min-width: 480px) {
-  .tarjeta--bio {
+  .tarjetas--bio {
     width: 50%; } }
 
 .habilidades__contenedor {
@@ -236,13 +231,6 @@ li .enlace--menu {
   color: #F8CF57; }
 
 /* Media MBF */
-.media {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 1rem; }
-
 .carousel {
   border: 2px solid #F8CF57;
   border-radius: 10px;
@@ -250,7 +238,7 @@ li .enlace--menu {
   padding: 2rem; }
   @media (min-width: 768px) {
     .carousel {
-      width: 60vw; } }
+      width: 70vw; } }
 
 .carousel-caption h5 {
   font-family: "Antic Slab", serif;
@@ -403,7 +391,8 @@ input {
 
 .form-control {
   background-color: rgba(238, 145, 188, 0.5);
-  border: 2px solid #F8CF57; }
+  border: 2px solid #F8CF57;
+  border-radius: 4px; }
 
 @media (min-width: 768px) {
   .form, .contacto {
