--- a/scss/_barraNav.scss
+++ b/scss/_barraNav.scss
@@ -17,6 +17,10 @@
     justify-content: center;
 }
 
+.navbar-toggler{
+    border: 0;
+}
+
 .navbar-toggler-icon{
     width: 2rem;
     height: 2rem;
