trabajando sobre contacto

--- a/css/styles.css
+++ b/css/styles.css
@@ -282,7 +282,7 @@ li .enlace--menu {
   font-weight: normal; }
 
 .protocolo {
-  width: 92% !important;
+  width: 95vw !important;
   display: flex;
   justify-content: center; }
   @media (min-width: 768px) {
@@ -298,10 +298,9 @@ li .enlace--menu {
   font-size: 2rem; }
 
 /* Contacto MBF */
-.centro {
+.contacto__container {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   align-items: center; }
 
 .form {
@@ -334,7 +333,7 @@ input {
 .boton:hover {
   color: #F8CF57; }
 
-.contacto {
+.contacto__medios {
   display: flex;
   text-align: center;
   gap: 5rem;
@@ -342,15 +341,16 @@ input {
   height: 70%;
   width: 95%; }
   @media (min-width: 480px) {
-    .contacto {
-      flex-direction: column; } }
+    .contacto__medios {
+      flex-direction: column;
+      width: 70%; } }
 
-.contenedorContacto {
+.medios {
   background-color: rgba(238, 145, 188, 0.5);
   border-radius: 5px;
   border: 2px solid #F8CF57;
   padding: 0.5rem;
-  height: 25vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center; }
