--- a/scss/origen.scss
+++ b/scss/origen.scss
@@ -170,9 +170,13 @@
     width: 90%;
     
     label {   
-        font-size: 2rem;
+        font-size: 1.5rem;
         font-family: $fuenteHead;
-        color: $amarillo;
+        font-weight: bold;
+        background-color: $rosaosc;
+        border: $bordeAmarillo;
+        border-radius: 5px;
+        padding: 1rem;
     }
 
     textarea{
@@ -198,24 +202,21 @@ input {
     font-weight: bold;
     color: $blanco;
     padding: 1rem;
-    transition: color .3s ease;
+    transition: background-color color .5s ease;
 }
 
 .boton:hover{
-    color: $amarillo;
+    color: $rosaosc;
+    background-color: $amarillo;
 }
 
 .contacto__medios {
-    display: flex;
     text-align: center;
-    gap: 5rem;
     margin-top: 2rem;
-    height: 70%;
-    width: 95%;
-
+    
     @include media (sm){
         flex-direction: column;
-        width: 70%;
+        width: 50%;
     }
 }
 
@@ -224,10 +225,6 @@ input {
     border-radius: 5px;
     border: $bordeAmarillo;
     padding: 0.5rem;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 .textoContacto{
@@ -247,8 +244,10 @@ input {
 }
 
 .form{
+    display: flex;
+    flex-direction: column;
     @include media(sm){
-        width: 70%;
+        width: 50%;
     }
 }
 
@@ -256,13 +255,16 @@ input {
     background-color: $rosatransp;
     border: $bordeAmarillo;
     border-radius: 4px;
-
+    padding: 1.2rem;
 }
 
-.form, .contacto{
-    @include media (md){
-        width: 50%;
-    }
+.contacto__container{
+    display: flex;
+    flex-direction: column;
 }
 
+.consulta{
+    width: 80%;
+    padding: 3rem;
+}
     
