--- a/css/styles.css
+++ b/css/styles.css
@@ -1,123 +1,167 @@
 @charset "UTF-8";
+
 /* Global */
 * {
   font-size: 62.5%;
-  /*  Para usar REMs / 1rem = 10px */ }
+  /*  Para usar REMs / 1rem = 10px */
+}
 
 p {
   font-size: 1.7rem;
-  line-height: 1.1; }
+  line-height: 1.1;
+}
 
 img {
-  width: 100%; }
+  width: 100%;
+}
 
 /* Media queries */
 h1 {
-  font-size: 7rem; }
+  font-size: 5rem;
+}
 
 h2 {
-  font-size: 3.5rem; }
+  font-size: 3.5rem;
+}
 
 h3 {
-  font-size: 2.33333rem; }
+  font-size: 2.33333rem;
+}
 
 h4 {
-  font-size: 1.75rem; }
+  font-size: 1.75rem;
+}
 
 h5 {
-  font-size: 1.4rem; }
+  font-size: 1.4rem;
+}
 
 h6 {
-  font-size: 1.16667rem; }
+  font-size: 1.16667rem;
+}
+
+.container_titulo {
+  height: auto;
+  border: 2px solid #C4357E;
+  border-radius: 10px;
+  background-color: rgba(248, 207, 87, 0.8);
+  padding: 1rem;
+}
 
 .titulo {
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
   color: #C4357E;
-  border: 2px solid #C4357E;
-  border-radius: 10px;
-  background-color: rgba(248, 207, 87, 0.8);
-  padding: 1rem; }
+}
 
 .negrita {
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
-  font-size: 2.5rem; }
+  font-size: 2.5rem;
+}
 
 .tarjetas {
   background-color: rgba(238, 145, 188, 0.5);
   border: 2px solid #F8CF57;
   border-radius: 10px;
-  padding: 1rem; }
+  padding: 1rem;
+}
 
 .tarjetas--texto {
   font-size: 1.5rem;
-  line-height: 1.2; }
-  @media (min-width: 768px) {
-    .tarjetas--texto {
-      font-size: 2rem; } }
+  line-height: 1.2;
+}
+
+@media (min-width: 768px) {
+  .tarjetas--texto {
+    font-size: 2rem;
+  }
+}
 
 /* Estilos placeholder*/
 ::-webkit-input-placeholder {
   color: #F8CF57 !important;
-  font-size: 1.3rem; }
+  font-size: 1.3rem;
+}
 
 ::-moz-placeholder {
   color: #F8CF57 !important;
-  font-size: 1.3rem; }
+  font-size: 1.3rem;
+}
 
 :-ms-input-placeholder {
   color: #F8CF57 !important;
-  font-size: 1.3rem; }
+  font-size: 1.3rem;
+}
 
 /* Fondo */
 .fondo {
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center; }
+  background-position: center center;
+}
 
 /* Imagenes fondo */
 .fondo--inicio {
-  background-image: url(../img/fondos/iniciomobile.jpg); }
-  @media (min-width: 768px) {
-    .fondo--inicio {
-      background-image: url(../img/fondos/inicio.jpg); } }
+  background-image: url(../img/fondos/iniciomobile.jpg);
+}
+
+@media (min-width: 768px) {
+  .fondo--inicio {
+    background-image: url(../img/fondos/inicio.jpg);
+  }
+}
 
 .fondo--bio {
-  background-image: url(../img/fondos/biomobile.webp); }
-  @media (min-width: 480px) {
-    .fondo--bio {
-      background-image: url(../img/fondos/bio.webp); } }
+  background-image: url(../img/fondos/biomobile.webp);
+}
+
+@media (min-width: 480px) {
+  .fondo--bio {
+    background-image: url(../img/fondos/bio.webp);
+  }
+}
 
 .fondo--media {
-  background-image: url(../img/fondos/media.jpg); }
+  background-image: url(../img/fondos/media.jpg);
+}
 
 .fondo--tecnica {
-  background-image: url(../img/fondos/tecnica.jpg); }
+  background-image: url(../img/fondos/tecnica.jpg);
+}
 
 .fondo--contacto {
-  background-image: url(../img/fondos/contactomobile.webp); }
-  @media (min-width: 480px) {
-    .fondo--contacto {
-      background-image: url(../img/fondos/contacto.webp); } }
+  background-image: url(../img/fondos/contactomobile.webp);
+}
+
+@media (min-width: 480px) {
+  .fondo--contacto {
+    background-image: url(../img/fondos/contacto.webp);
+  }
+}
 
 /* Barra de navegacion */
 .header {
-  background: linear-gradient(90deg, #ee91bc 0%, #c4357e 100%); }
+  background: linear-gradient(90deg, #ee91bc 0%, #c4357e 100%);
+}
 
 .navbar__logo {
-  margin: 0 1rem 0 1rem; }
+  margin: 0 1rem 0 1rem;
+}
 
 .navbar-nav li {
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+}
 
 .navbar-toggler {
-  border: 0; }
+  border: 0;
+}
 
 .navbar-toggler-icon {
   width: 3rem;
-  height: 3rem; }
+  height: 3rem;
+}
 
 .enlace {
   font-family: "PT Sans", sans-serif;
@@ -125,10 +169,12 @@ h6 {
   font-size: 1.5rem;
   color: #F8CF57;
   transition: color .3s ease !important;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 .enlace:hover {
-  color: #e7e7e7 !important; }
+  color: #e7e7e7 !important;
+}
 
 li .enlace--menu {
   font-family: "PT Sans", sans-serif;
@@ -136,57 +182,73 @@ li .enlace--menu {
   font-size: 2rem;
   margin-right: 2rem;
   transition: color .3s;
-  color: #e7e7e7 !important; }
+  color: #e7e7e7 !important;
+}
 
 .enlace--menu:hover {
-  color: #F8CF57 !important; }
+  color: #F8CF57 !important;
+}
 
 /* Footer */
 .footer {
   background: linear-gradient(90deg, rgba(196, 53, 126, 0.5) 0%, rgba(238, 145, 188, 0.5) 100%);
-  margin-top: 1.5rem; }
+  margin-top: 1.5rem;
+}
+
+.footer__redes {
+  width: 95%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem 0 1rem 0;
+}
+
+@media (min-width: 768px) {
   .footer__redes {
-    width: 95%;
-    height: 100%;
-    display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
     align-items: center;
-    padding: 1rem 0 1rem 0; }
-    @media (min-width: 768px) {
-      .footer__redes {
-        justify-content: flex-end;
-        align-items: center;
-        gap: 2rem; } }
+    gap: 2rem;
+  }
+}
 
 .footer__redes--hover {
-  transition: background-color border-radius .5s ease; }
+  transition: background-color border-radius .5s ease;
+}
 
 .footer__redes--hover:hover {
   background-color: rgba(238, 145, 188, 0.5);
-  border-radius: 10px; }
+  border-radius: 10px;
+}
 
 .footer__nombre {
   display: inline;
   font-family: "PT Sans", sans-serif;
   color: #F8CF57;
   font-size: 1.5rem;
-  margin: 0; }
+  margin: 0;
+}
 
 /* Index MBF */
 .inicio {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .inicio__tarjetas {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   height: 60%;
-  margin-top: 3rem; }
-  @media (min-width: 768px) {
-    .inicio__tarjetas {
-      width: 60%;
-      align-self: flex-end; } }
+  margin-top: 3rem;
+}
+
+@media (min-width: 768px) {
+  .inicio__tarjetas {
+    width: 60%;
+    align-self: flex-end;
+  }
+}
 
 .inicio__funciones {
   display: flex;
@@ -195,15 +257,19 @@ li .enlace--menu {
   background-color: rgba(238, 145, 188, 0.5);
   padding: 1rem;
   border: 2px solid #F8CF57;
-  border-radius: 10px; }
+  border-radius: 10px;
+}
 
 .ubicacion {
-  min-width: 95%; }
+  min-width: 95%;
+}
 
 /* Bio MBF */
 @media (min-width: 480px) {
   .tarjetas--bio {
-    width: 50%; } }
+    width: 50%;
+  }
+}
 
 .habilidades__contenedor {
   border: 2px solid #F8CF57;
@@ -213,114 +279,144 @@ li .enlace--menu {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  transition: background-color .3s ease; }
+  transition: background-color .3s ease;
+}
 
 .habilidades__contenedor:hover {
-  background-color: #C4357E; }
+  background-color: #C4357E;
+}
 
 .habilidades__img {
-  max-width: 10rem; }
+  max-width: 10rem;
+}
 
 .habilidades__texto {
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
   font-size: 3rem;
-  color: #F8CF57; }
+  color: #F8CF57;
+}
 
 /* Media MBF */
 .carousel {
   border: 2px solid #F8CF57;
   border-radius: 10px;
   background-color: rgba(238, 145, 188, 0.5);
-  padding: 2rem; }
-  @media (min-width: 768px) {
-    .carousel {
-      width: 70vw; } }
+  padding: 2rem;
+}
+
+@media (min-width: 768px) {
+  .carousel {
+    width: 70vw;
+  }
+}
 
 .carousel-caption h5 {
   font-family: "Antic Slab", serif;
   font-size: 2rem;
   color: black;
   background-color: rgba(248, 207, 87, 0.8);
-  border-radius: 10px; }
-  @media (min-width: 480px) {
-    .carousel-caption h5 {
-      font-size: 2.5rem; } }
+  border-radius: 10px;
+}
+
+@media (min-width: 480px) {
+  .carousel-caption h5 {
+    font-size: 2.5rem;
+  }
+}
 
 /* Técnica MBF */
 .tecnica {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly; }
+}
 
 .tecnica__tarjeta {
-  align-self: flex-start;
+  /*   align-self: flex-start; */
   margin: 3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+}
 
 .tecnica__tarjeta:last-of-type {
-  align-self: flex-end;
-  margin-bottom: 2rem; }
+  /*   align-self: flex-end; */
+  margin-bottom: 2rem;
+}
 
 .tecnica__tarjeta--titulo {
   font-size: 4rem;
   color: #F8CF57;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 .subsTecnica {
   font-size: 2rem;
-  font-weight: 700; }
+  font-weight: 700;
+}
 
 .textoTecnica {
   font-size: 1.4rem;
-  font-weight: normal; }
+  font-weight: normal;
+}
 
 .protocolo {
   width: 95vw !important;
   display: flex;
-  justify-content: center; }
-  @media (min-width: 768px) {
-    .protocolo {
-      width: 70%; } }
+  justify-content: center;
+}
+
+@media (min-width: 768px) {
+  .protocolo {
+    width: 70%;
+  }
+}
 
 .protocolo__contenedor {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+}
 
 .protocolo__texto {
-  font-size: 2rem; }
+  font-size: 2rem;
+}
 
 /* Contacto MBF */
 .contacto__container {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+}
 
 .form {
-  width: 90%; }
-  .form label {
-    font-size: 1.5rem;
-    font-family: "PT Sans", sans-serif;
-    font-weight: bold;
-    background-color: #C4357E;
-    border: 2px solid #F8CF57;
-    border-radius: 5px;
-    padding: 1rem; }
-  .form textarea {
-    width: 100%;
-    background-color: rgba(238, 145, 188, 0.5);
-    border-radius: 5px;
-    border: 2px solid #F8CF57;
-    resize: none; }
+  width: 90%;
+}
+
+.form label {
+  font-size: 1.5rem;
+  font-family: "PT Sans", sans-serif;
+  font-weight: bold;
+  background-color: #C4357E;
+  border: 2px solid #F8CF57;
+  border-radius: 5px;
+  padding: 1rem;
+}
+
+.form textarea {
+  width: 100%;
+  background-color: rgba(238, 145, 188, 0.5);
+  border-radius: 5px;
+  border: 2px solid #F8CF57;
+  resize: none;
+}
 
 input {
   background-color: rgba(238, 145, 188, 0.5);
   border-radius: 5px;
-  border: 2px solid #F8CF57; }
+  border: 2px solid #F8CF57;
+}
 
 .boton {
   background-color: #C4357E;
@@ -329,57 +425,89 @@ input {
   font-weight: bold;
   color: #e7e7e7;
   padding: 1rem;
-  transition: background-color color .5s ease; }
+  transition: background-color color .5s ease;
+}
 
 .boton:hover {
   color: #C4357E;
-  background-color: #F8CF57; }
+  background-color: #F8CF57;
+}
 
 .contacto__medios {
   text-align: center;
-  margin-top: 2rem; }
-  @media (min-width: 480px) {
-    .contacto__medios {
-      flex-direction: column;
-      width: 50%; } }
+  margin-top: 2rem;
+}
+
+@media (min-width: 480px) {
+  .contacto__medios {
+    flex-direction: column;
+    width: 50%;
+  }
+}
 
 .medios {
   background-color: rgba(238, 145, 188, 0.5);
   border-radius: 5px;
   border: 2px solid #F8CF57;
-  padding: 0.5rem; }
+  padding: 0.5rem;
+}
 
 .textoContacto {
   text-align: center;
   color: #e7e7e7;
   font-family: "Antic Slab", serif;
   font-weight: bold;
-  font-size: 1.5rem; }
-  @media (min-width: 480px) {
-    .textoContacto {
-      font-size: 2rem; } }
+  font-size: 1.5rem;
+}
+
+@media (min-width: 480px) {
+  .textoContacto {
+    font-size: 2rem;
+  }
+}
 
 .logoCtc {
   color: #F8CF57;
-  margin: 1rem; }
+  margin: 1rem;
+}
 
 .form {
   display: flex;
-  flex-direction: column; }
-  @media (min-width: 480px) {
-    .form {
-      width: 50%; } }
+  flex-direction: column;
+}
+
+@media (min-width: 480px) {
+  .form {
+    width: 50%;
+  }
+}
 
 .form-control {
   background-color: rgba(238, 145, 188, 0.5);
   border: 2px solid #F8CF57;
   border-radius: 4px;
-  padding: 1.2rem; }
+  padding: 1.2rem;
+}
 
 .contacto__container {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .consulta {
   width: 80%;
-  padding: 3rem; }
+  padding: 3rem;
+  border: 2px solid #C4357E;
+  border-radius: 10px;
+  background-color: rgba(248, 207, 87, 0.8);
+  padding: 1rem;
+
+
+}
+
+.fondito{
+  border: 2px solid #C4357E;
+  border-radius: 10px;
+  background-color: rgba(248, 207, 87, 0.8);
+  padding: 1rem;
+}
